--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
