--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "react/prop-types": "off",
     "react/jsx-curly-newline": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/jsx-wrap-multilines": "off"
+    "react/jsx-wrap-multilines": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "parser": "babel-eslint"
 }
