--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "dayjs": "^1.10.4",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
