--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
+    "use-sound": "^2.0.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
