--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.10.4",
+    "history": "^4.10.1",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.1",
