--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toast-notifications": "^2.4.4",
+    "use-persisted-state": "^0.3.3",
     "use-sound": "^2.0.2",
     "web-vitals": "^1.0.1"
   },
