--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@date-io/date-fns": "v1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
-    "dayjs": "^1.10.4",
+    "date-fns": "^2.22.1",
+    "dayjs": "^1.10.5",
     "history": "^4.10.1",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
@@ -24,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toast-notifications": "^2.4.4",
+    "socket.io-client": "^4.1.2",
     "use-persisted-state": "^0.3.3",
     "use-sound": "^2.0.2",
     "web-vitals": "^1.0.1"
