--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
     "react-toast-notifications": "^2.4.4",
     "socket.io-client": "^4.1.2",
     "use-persisted-state": "^0.3.3",
     "use-sound": "^2.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
